--- a/MTournamentsApp/MTournamentsApp/Views/Home/Index.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Manage</h1>
+
+    <div class="row align-items-center justify-content-center mt-3 mt-md-5">
+        <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Tournaments</a>
+        <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Teams</a>
+        <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Members</a>
+    </div>
 </div>
