Added the navbar logo and made it stacked

--- a/MTournamentsApp/MTournamentsApp/Views/Shared/_Layout.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Shared/_Layout.cshtml
@@ -11,25 +11,29 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MTournamentsApp</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+            <div class="container-fluid align-items-center justify-content-center">
+                <div class="row mx-auto align-items-center justify-content-center">
+                    <a class="col-12 mx-auto text-center" href="#"><img src="~/lib/images/condors_logo_MTournamentZ.png" alt="Conestoga Condors Logo" style="width:12rem"></a>
+                    @* <a class="navbar-brand col-12 mx-0 mt-0 text-center" asp-area="" asp-controller="Home" asp-action="Index"><span style="color:#d4af37">M</span>TournamentZ</a> *@
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-muted" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-muted" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -37,8 +41,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - MTournamentsApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-break">
+            &copy; 2024 - MTournamentsApp - v.1.0.0 - MTournamentZ (MTZ) Group 3 Milestone 2
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
