--- a/MTournamentsApp/MTournamentsApp/Views/Home/Index.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Manage</h1>
 
     <div class="row align-items-center justify-content-center mt-3 mt-md-5">
-        <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Tournaments</a>
+        <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" asp-controller="Tournaments" asp-action="List">Tournaments</a>
         <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Teams</a>
         <a class="btn btn-lg btn-primary me-0 me-md-3 mt-3 mt-md-0 col-10 col-md-3" href="#">Members</a>
     </div>
