--- a/MTournamentsApp/MTournamentsApp/Views/_ViewImports.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MTournamentsApp
 @using MTournamentsApp.Models
+@using MTournamentsApp.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
