--- a/MTournamentsApp/MTournamentsApp/Views/Players/Add.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Players/Add.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Adding Player";
 }
 
-<p class="h1 mt-5 mb-3 text-center">Add a new player</p>
+<a class="text-muted mt-3 mb-0 btn btn-lg" asp-asp-controller="Players" asp-action="List"><- Back</a>
+<p class="h1 mb-3 text-center">Add a new player</p>
 
 <form class="row gx-4 align-items-center justify-content-center" asp-controller="Players" asp-action="Add" method="post" enctype="application/x-www-form-urlencoded">
     <div class="text-danger col-10 mx-auto" asp-validation-summary="All"></div>
