--- a/MTournamentsApp/MTournamentsApp/Views/Players/Delete.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Players/Delete.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "Delete Player";
 }
 
-<p class="h1 mt-5 mb-3 text-center">Deleting an existing player</p>
+<a class="text-muted mt-3 mb-0 btn btn-lg" asp-asp-controller="Players" asp-action="List"><- Back</a>
+
+<p class="h1 mb-4 text-center">Deleting an existing player</p>
 
 <form class="row gx-4" asp-controller="Players" asp-action="Delete" method="post" enctype="application/x-www-form-urlencoded">
     <p class="h3 col-10">Are you sure you want to delete this player?</p>
-    <p class="h3 col-10 mt-1 fw-bold">@Model.FirstName @Model.LastName (Age: @Model.Age), playing for @Model.Team.TeamName as @Model.Role.PlayerRoleName</p>
+    <p class="h3 col-10 mt-1 fw-bold">@Model.FirstName @Model.LastName (Age: @Model.Age), playing for @Model.Team?.TeamName as @Model.Role?.PlayerRoleName</p>
 
     <input type="hidden" asp-for="Id" />
 
