Added the option to view players by team. Enhanced the 'Back' button functionality

--- a/MTournamentsApp/MTournamentsApp/Views/Players/Delete.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Players/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete Player";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" asp-asp-controller="Players" asp-action="List"><- Back</a>
+<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();"><- Back</a>
 
 <p class="h1 mb-4 text-center">Deleting an existing player</p>
 
@@ -16,6 +16,6 @@
 
     <div class="form-group col-10 mt-4">
         <button type="submit" class="btn btn-primary me-3">Delete</button>
-        <a asp-controller="Players" asp-action="List" class="btn btn-secondary">Cancel</a>
+        <a onclick="javascript:window.history.back();" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
