--- a/MTournamentsApp/MTournamentsApp/Views/Members/Add.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Members/Add.cshtml
@@ -1,13 +1,13 @@
 ﻿@model PlayerViewModel
 
 @{
-    ViewData["Title"] = "Adding Player";
+    ViewData["Title"] = "Adding Member";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" asp-asp-controller="Players" asp-action="List"><- Back</a>
-<p class="h1 mb-3 text-center">Add a new player</p>
+<a class="text-muted mt-3 mb-0 btn btn-lg" asp-asp-controller="Members" asp-action="List"><- Back</a>
+<p class="h1 mb-3 text-center">Add a new member</p>
 
-<form class="row gx-4 align-items-center justify-content-center" asp-controller="Players" asp-action="Add" method="post" enctype="application/x-www-form-urlencoded">
+<form class="row gx-4 align-items-center justify-content-center" asp-controller="Members" asp-action="Add" method="post" enctype="application/x-www-form-urlencoded">
     <div class="text-danger col-10 mx-auto" asp-validation-summary="All"></div>
 
     <div class="form-group col-10 col-lg-5 mx-auto">
@@ -26,9 +26,14 @@
     </div>
 
     <div class="form-group col-10 col-lg-5 mx-auto mt-3">
-        <label asp-for="Player.TeamId">Player Team</label>
+        <label asp-for="@Model.Player.TeamId">Email</label>
+        <input type="text" asp-for="@Model.Player.Email" class="form-control" />
+    </div>
+
+    <div class="form-group col-10 col-lg-5 mx-auto mt-3">
+        <label asp-for="Player.TeamId">Team</label>
         <select asp-for="Player.TeamId" class="form-control">
-            <option value="">Please select player's team'</option>
+            <option value="">Please select member's team</option>
             @foreach (Team t in Model.TeamsList)
             {
                 <option value="@t.TeamId">@t.TeamName</option>
@@ -37,9 +42,9 @@
     </div>
 
     <div class="form-group col-10 col-lg-5 mx-auto mt-3">
-        <label asp-for="Player.PlayerRoleId">Player Team</label>
+        <label asp-for="Player.PlayerRoleId">Role</label>
         <select asp-for="Player.PlayerRoleId" class="form-control">
-            <option value="">Please select player's role'</option>
+            <option value="">Please select member's role</option>
             @foreach (PlayerRole p in Model.RolesList)
             {
                 <option value="@p.PlayerRoleId">@p.PlayerRoleName</option>
@@ -49,6 +54,6 @@
 
     <div class="form-group col-10 mx-auto mt-4 text-center">
         <button type="submit" class="btn btn-primary me-3">Add</button>
-        <a asp-controller="Players" asp-action="List" class="btn btn-secondary">Cancel</a>
+        <a asp-controller="Members" asp-action="List" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
