--- a/MTournamentsApp/MTournamentsApp/Views/Members/Edit.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Members/Edit.cshtml
@@ -1,14 +1,14 @@
 ﻿@model PlayerViewModel
 
 @{
-    ViewData["Title"] = "Editing Player";
+    ViewData["Title"] = "Editing Member";
 }
 
 <a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();"><- Back</a>
 
-<p class="h1 mb-4 text-center">Edit player</p>
+<p class="h1 mb-4 text-center">Edit member</p>
 
-<form class="row gx-4 align-items-center justify-content-center" asp-controller="Players" asp-action="Edit" method="post" enctype="application/x-www-form-urlencoded">
+<form class="row gx-4 align-items-center justify-content-center" asp-controller="Members" asp-action="Edit" method="post" enctype="application/x-www-form-urlencoded">
     <div class="text-danger col-10 mx-auto" asp-validation-summary="All"></div>
 
     <div class="form-group col-10 col-lg-5 mx-auto">
@@ -27,9 +27,14 @@
     </div>
 
     <div class="form-group col-10 col-lg-5 mx-auto mt-3">
-        <label asp-for="@Model.Player.TeamId">Player Team</label>
+        <label asp-for="@Model.Player.TeamId">Email</label>
+        <input type="text" asp-for="@Model.Player.Email" class="form-control" />
+    </div>
+
+    <div class="form-group col-10 col-lg-5 mx-auto mt-3">
+        <label asp-for="@Model.Player.TeamId">Team</label>
         <select asp-for="@Model.Player.TeamId" class="form-control">
-            <option value="">Please select player's team'</option>
+            <option value="">Please select member's team</option>
             @foreach (Team t in Model.TeamsList)
             {
                 <option value="@t.TeamId">@t.TeamName</option>
@@ -38,9 +43,9 @@
     </div>
 
     <div class="form-group col-10 col-lg-5 mx-auto mt-3">
-        <label asp-for="@Model.Player.PlayerRoleId">Player Team</label>
+        <label asp-for="@Model.Player.PlayerRoleId">Team</label>
         <select asp-for="@Model.Player.PlayerRoleId" class="form-control">
-            <option value="">Please select player's role'</option>
+            <option value="">Please select member's role</option>
             @foreach (PlayerRole p in Model.RolesList)
             {
                 <option value="@p.PlayerRoleId">@p.PlayerRoleName</option>
@@ -52,6 +57,6 @@
 
     <div class="form-group col-10 mx-auto mt-4 text-center">
         <button type="submit" class="btn btn-primary me-3">Update</button>
-        <a onclick="javascript:window.history.back();" class="btn btn-secondary">Cancel</a>
+        <a asp-controller="Members" asp-action="List" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
