--- a/MTournamentsApp/MTournamentsApp/Views/Shared/_Layout.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                                 <a class="nav-link text-muted" asp-area="" asp-controller="Teams" asp-action="List">Teams</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-muted" asp-area="" asp-controller="Players" asp-action="List">Players</a>
+                                <a class="nav-link text-muted" asp-area="" asp-controller="Members" asp-action="List">Members</a>
                             </li>
                         </ul>
                     </div>
