--- a/MTournamentsApp/MTournamentsApp/Views/Teams/List.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Teams/List.cshtml
@@ -14,7 +14,7 @@
             <th>Team Description</th>
             <th>Game</th>
             <th># of Passed Tournaments</th>
-            <th># of Players</th>
+            <th># of Members</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -26,8 +26,8 @@
                 <td>@t.TeamDescription</td>
                 <td>@t.MainTeamGame?.GameName</td>
                 <td>@t.Tournaments?.Count()</td>
-                <td><a asp-controller="Teams" asp-action="Players" asp-route-id="@t.TeamId">@t.Players?.Count()</a></td>
-                <td class="text-center"><a asp-controller="Teams" asp-action="Manage" asp-route-id="@t.TeamId">Manage</a><span class="mx-3">|</span><a asp-controller="Teams" asp-action="Edit" asp-route-id="@t.TeamId">Edit</a><span class="mx-3">|</span><a asp-controller="Teams" asp-action="Delete" asp-route-id="@t.TeamId">Delete</a></td>
+                <td><a asp-controller="Teams" asp-action="Members" asp-route-id="@t.TeamId">@t.Players?.Count()</a></td>
+                <td class="text-center"><a asp-controller="Teams" asp-action="Edit" asp-route-id="@t.TeamId">Edit</a><span class="mx-3">|</span><a asp-controller="Teams" asp-action="Delete" asp-route-id="@t.TeamId">Delete</a></td>
             </tr>
         }
     </tbody>
