--- a/MTournamentsApp/MTournamentsApp/Views/Account/LogIn.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/LogIn.cshtml
@@ -4,41 +4,42 @@
     ViewData["Title"] = "Log In";
 }
 
+<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();">← Back</a>
+<p class="h1 mb-3 text-center">Log In</p>
+
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-<form method="post" asp-controller="Account" asp-action="LogIn" asp-route-returnUrl="@Model.ReturnUrl">
-    <div class="form-group row">
+<form class="row gx-4 justify-content-center" asp-controller="Account" asp-action="LogIn" asp-route-returnUrl="@Model.ReturnUrl">
+    <div class="form-group row mb-3">
+        <!-- Added mb-3 for margin-bottom -->
         <div class="col-sm-2"><label>Username:</label></div>
         <div class="col-sm-4">
-            <!-- Input field for username -->
             <input asp-for="Username" class="form-control" />
         </div>
         <div class="col">
-            <!-- Validation message for username -->
             <span asp-validation-for="Username" class="text-danger"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row mb-3">
+        <!-- Added mb-3 for margin-bottom -->
         <div class="col-sm-2"><label>Password:</label></div>
         <div class="col-sm-4">
-            <!-- Input field for password -->
             <input type="password" asp-for="Password" class="form-control" />
         </div>
         <div class="col">
-            <!-- Validation message for password -->
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-3">
+        <!-- Added mb-3 for margin-bottom -->
         <div class="offset-2 col-sm-4">
-            <!-- Button to submit login -->
             <button type="submit" class="btn btn-primary">
                 Log In
             </button>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-4">
+        <!-- Added mb-4 for margin-bottom -->
         <div class="offset-2 col-sm-4">
-            <!-- Link to register page if not registered -->
             Not registered? <a asp-controller="Account" asp-action="Register">Register as a new user</a>
         </div>
     </div>
