--- a/MTournamentsApp/MTournamentsApp/Views/Tournaments/Cancel.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Tournaments/Cancel.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Cancel Tournament";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();">← Back</a>
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
 <p class="h1 mb-4 text-center">Cancel an existing tournament</p>
 
 <form class="row gx-4" asp-controller="Tournaments" asp-action="CancelConfirmed" method="post">
