--- a/MTournamentsApp/MTournamentsApp/Views/Members/Edit.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Members/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model PlayerViewModel
 
 @{
-    ViewData["Title"] = "Editing Member";
+    ViewData["Title"] = "Edit Member";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();"><- Back</a>
-
-<p class="h1 mb-4 text-center">Edit member</p>
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
+<p class="h1 mb-4 text-center">Edit an existing member</p>
 
 <form class="row gx-4 align-items-center justify-content-center" asp-controller="Members" asp-action="Edit" method="post" enctype="application/x-www-form-urlencoded">
     <div class="text-danger col-10 mx-auto" asp-validation-summary="All"></div>
