--- a/MTournamentsApp/MTournamentsApp/Views/Members/List.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Members/List.cshtml
@@ -7,28 +7,42 @@
 <p class="h1 mb-3">Members List</p>
 <a class="btn btn-primary mb-3" asp-controller="Members" asp-action="Add">Add New Member</a>
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Role</th>
-            <th>Team Name</th>
-            <th>Email</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Player p in Model)
-        {
-            <tr>
-                <td>@p.FirstName @p.LastName</td>
-                <td>@p.Age</td>
-                <td>@p.Role?.PlayerRoleName</td>
-                <td>@p.Team?.TeamName</td>
-                <td>@p.Email</td>
-                <td class="text-center"><a asp-controller="Members" asp-action="Edit" asp-route-id="@p.Id">Edit</a><span class="mx-3">|</span><a asp-controller="Members" asp-action="Delete" asp-route-id="@p.Id">Delete</a></td>
-            </tr>
-        }
-    </tbody>
-</table>
+@if (Model != null)
+{
+    if (Model.Count() > 0)
+    {
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Role</th>
+                    <th>Team Name</th>
+                    <th>Email</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Player p in Model)
+                {
+                    <tr>
+                        <td>@p.FirstName @p.LastName</td>
+                        <td>@p.Age</td>
+                        <td>@p.Role?.PlayerRoleName</td>
+                        <td>@p.Team?.TeamName</td>
+                        <td>@p.Email</td>
+                        <td class="text-center"><a asp-controller="Members" asp-action="Edit" asp-route-id="@p.Id">Edit</a><span class="mx-3">|</span><a asp-controller="Members" asp-action="Delete" asp-route-id="@p.Id">Delete</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p class="text-muted h3 mb-4 text-center">No members are currently registered.</p>
+    }
+}
+else
+{
+    <p class="text-muted h3 mb-4 text-center">No members are currently registered.</p>
+}
