--- a/MTournamentsApp/MTournamentsApp/Views/Teams/Add.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Teams/Add.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TeamViewModel
 
 @{
-    ViewData["Title"] = "Adding Team";
+    ViewData["Title"] = "Add Team";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();">← Back</a>
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
 <p class="h1 mb-3 text-center">Add a new team</p>
 
 <form class="row gx-4 align-items-center justify-content-center" asp-controller="Teams" asp-action="Add" method="post" enctype="application/x-www-form-urlencoded">
