--- a/MTournamentsApp/MTournamentsApp/Views/Teams/Edit.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Teams/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TeamViewModel
 
 @{
-    ViewData["Title"] = "Editing Team";
+    ViewData["Title"] = "Edit Team";
     var teamName = Model?.Team?.TeamName;
     if (teamName != null)
     {
@@ -9,9 +9,8 @@
     }
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();"><- Back</a>
-
-<p class="h1 mb-4 text-center">Edit team</p>
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
+<p class="h1 mb-4 text-center">Edit an existing team</p>
 
 <form class="row gx-4 align-items-center justify-content-center" asp-controller="Teams" asp-action="Edit" method="post" enctype="application/x-www-form-urlencoded">
     <div class="text-danger col-10 mx-auto" asp-validation-summary="All"></div>
@@ -40,7 +39,7 @@
     <input type="hidden" asp-for="@Model.Team.TeamId" />
 
     <div class="form-group col-10 mx-auto mt-4 text-center">
-        <button type="submit" class="btn btn-primary me-3">Edit</button>
+        <button type="submit" class="btn btn-primary me-3">Update</button>
         <a asp-controller="Teams" asp-action="List" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
