Add authorization to methods

--- a/MTournamentsApp/MTournamentsApp/Views/Account/AccessDenied.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/AccessDenied.cshtml
@@ -2,4 +2,5 @@
     ViewBag.Title = "Access Denied";
 }
 
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
 <h2>Access Denied</h2>
