--- a/MTournamentsApp/MTournamentsApp/Views/Account/Register.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<a class="text-muted mt-3 mb-0 btn btn-lg" onclick="javascript:window.history.back();">← Back</a>
+<a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
 <p class="h1 mb-3 text-center">Register</p>
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
