Remove tournament 2 teams edit requirement

--- a/MTournamentsApp/MTournamentsApp/Views/Account/AccessDenied.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/AccessDenied.cshtml
@@ -3,4 +3,4 @@
 }
 
 <a class="mt-3 mb-0 btn btn-secondary" onclick="javascript:window.history.back();">← Back</a>
-<h2>Access Denied</h2>
+<p class="h1 mb-3 text-center">Access Denied</p>
