--- a/MTournamentsApp/MTournamentsApp/Views/Account/LogIn.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/LogIn.cshtml
@@ -40,7 +40,7 @@
     <div class="row mb-4">
         <!-- Added mb-4 for margin-bottom -->
         <div class="offset-2 col-sm-4">
-            Not registered? <a asp-controller="Account" asp-action="Register">Register as a new user</a>
+            Not registered? <a asp-controller="Account" asp-action="Register">Register as a new user.</a>
         </div>
     </div>
 </form>
