--- a/MTournamentsApp/MTournamentsApp/Views/Account/Register.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Account/Register.cshtml
@@ -45,7 +45,7 @@
     <div class="row mb-4">
         <!-- Added mb-4 for bottom spacing -->
         <div class="offset-2 col-sm-4">
-            Already registered? <a asp-controller="Account" asp-action="LogIn">Log In</a>
+            Already registered? <a asp-controller="Account" asp-action="LogIn">Log In.</a>
         </div>
     </div>
 </form>
