--- a/MTournamentsApp/MTournamentsApp/Views/Tournaments/Teams.cshtml
+++ b/MTournamentsApp/MTournamentsApp/Views/Tournaments/Teams.cshtml
@@ -17,7 +17,7 @@
                     <th>Team Name</th>
                     <th>Team Description</th>
                     <th>Game</th>
-                    <th># of Passed Tournaments</th>
+                    <th># of Tournament Participations</th>
                     <th># of Members</th>
                     <th>Actions</th>
                 </tr>
